samples/errors/condition-not-bool.stkn
import console

if 0
    console.log(false)
if 'abc'
    console.log(false)
